# optimised_route_to_travel_on_local

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: ideation.txt  mkdocs.yml
docs/docs/: index.md
notebooks/: Untitled-1.ipynb  extraction.ipynb  interactive_train_graph.html  refining_data_extracton.ipynb
optimised_route_to_travel_on_local/: dataset.py  main.py
